bin/testsuite/tests/compiler/src/errors/compiler4414.swg
#global testerror "Err0267"
using Swag

func toto(x: const &&s32)
{
}

//#[Swag.PrintBc]
#test
{
}
